# tea-and-pfd

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
docs/: OPENROUTER_INTEGRATION_SUMMARY.md  OPENROUTER_SETUP.md  OPERATING_MANUAL.md  PROCESS_SPEC_GUIDE.md  blog_frontend_architecture.md
examples/: corn_stover_ethanol.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/jobs/: page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/app/new/: page.tsx
frontend/src/components/jobs/: job-form.tsx  job-status.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/pfd/: mermaid-viewer.tsx
frontend/src/components/tea/: tea-summary.tsx
frontend/src/lib/: api.ts  hooks.ts  types.ts
src/processflow/: __init__.py  cli.py
src/processflow/api/: app.py  config.py  schemas.py  storage.py
src/processflow/api/database/: engine.py  migrations.py  models.py
src/processflow/api/routes/: health.py  jobs.py  templates.py
src/processflow/api/services/: job_runner.py
src/processflow/parser/: nl_parser.py
src/processflow/parser/templates/: corn_stover_ethanol.json
src/processflow/renderer/: graphviz_renderer.py  mermaid_renderer.py
src/processflow/schema/: __init__.py  process_spec.py
src/processflow/tea/: generic_tea.py  simulation.py  xlsx_writer.py
src/processflow/topology/: engine.py  registry.py
tests/: conftest.py  test_api.py  test_open_schema.py  test_parser.py  test_renderer.py  test_schema.py  test_tea.py  test_topology.py
