[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "processflow-ai"
version = "0.1.0"
description = "Natural language to process flow diagrams and techno-economic analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "ProcessFlow AI Contributors"},
]
keywords = ["process engineering", "TEA", "PFD", "biosteam", "chemical engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "biosteam>=2.50",
    "biorefineries>=2.30",
    "openpyxl>=3.1",
    "graphviz>=0.20",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.0",
]

[project.scripts]
processflow = "processflow.cli:main"
processflow-api = "processflow.api.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
